<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/motion_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/fragment_article_page_scene"
    tools:context=".ui.ArticlePageFragment">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/article_img"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/news_three"
        app:layout_constraintHeight_percent="0.55"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:riv_corner_radius_bottom_left="15dip"
        app:riv_corner_radius_bottom_right="15dip"
        app:riv_corner_radius_top_left="15dip"
        app:riv_corner_radius_top_right="15dip"
        app:riv_tile_mode="clamp" />




    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/back_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_arrow_back"
        app:altSrc="@drawable/ic_arrow_back_end"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/selected_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="25dp"
        app:altSrc="@drawable/ic_bookmarks_unselected_end"
        android:src="@drawable/ic_bookmarks_unselected"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/todo" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/share_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="25dp"
        android:src="@drawable/ic_share"
        app:altSrc="@drawable/ic_share_end"
        android:contentDescription="@string/todo"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selected_img" />

    <TextView
        android:id="@+id/us_election_cv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:background="@drawable/election_shape"
        android:gravity="center"
        android:text="@string/us_election"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/article_tv"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9"
        app:layout_constraintVertical_chainStyle="packed"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/article_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/article_text"
        android:textColor="@color/material_white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/scroll_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/us_election_cv"

        />

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/scroll_shape"
        android:padding="15dp"
        app:layoutDescription="@xml/fragment_article_page_xml_scroll_view_scene"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.5">

        <TextView
            android:id="@+id/results_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/results"
            android:textColor="#333647"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/article_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:justificationMode="inter_word"
            android:text="@string/aaa"
            android:textColor="#666C8E"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/results_tv" />

    </androidx.constraintlayout.motion.widget.MotionLayout>


</androidx.constraintlayout.motion.widget.MotionLayout>